2008-02-25  Miloslav Trmač  <mitr@redhat.com>

	* README: Add some content.

	* userinfo.desktop.in (Icon)
	* usermount.desktop.in (Icon)
	* userpasswd.desktop.in (Icon): Remove extension from the icon name
	to allow non-PNG themes.

	* userinfo.desktop.in (Encoding)
	* usermount.desktop.in (Encoding)
	* userpasswd.desktop.in (Encoding): Remove (the item is obsolete).

2008-02-24  Miloslav Trmač  <mitr@redhat.com>

	* userinfo.desktop.in (Categories): Add missing trailing semicolon.

	* po/POTFILES.in: Add gsmclient.c.  Sort alphabetically.

	* Makefile.am (HGTAG): Replace CVSTAG.
	(tag, forcetag, archive): Update to use Mercurial.

2008-01-10  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Release 1.94.
	* NEWS: Update.

	* po/sr@latin.po: Rename from po/sr@Latn.po.
	* po/LINGUAS: Update.

	* userhelper.8.in: Beautify.

	* shvar.c (relative_to, svInclude): New functions.
	(svOpenFile): Add support for including other files.
	Original patch by Carlo de Wolf <cdewolf@redhat.com>.
	* userhelper.8.in: Document wrapper configuration file format.

2007-10-16  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Release 1.93.1.
	* NEWS: Update.

	* po/no.po: Remove (obsoleted by po/nb.po).
	* po/LINGUAS: Remove "no".

	* userhelper-wrap.c (trap_push, trap_pop): Avoid a warning.

	* userhelper-wrap.c: Don't #include <libwnck/libwnck.h>.
	* configure.in: Don't require libwnck.
	* Makefile.am (AM_CFLAGS, userinfo_LDADD, userpasswd_LDADD)
	(consolehelper_gtk_LDADD): Don't link with libwnck.

2007-09-29  Miloslav Trmač  <mitr@redhat.com>

	* po/LINGUAS: Update.

2007-09-05  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Release 1.93.
	* NEWS: Update.

	* userhelper-wrap.c (struct response): Remove member ready.
	(userhelper_parse_childout): Use prompt_type directly instead of
	resp->ready.

	* userhelper-wrap.c (userhelper_parse_childout): Only respond with
	UH_SYNC_POINT once to an UH_SYNC_POINT with no responses requested,
	not after each new message.
